<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">社群联盟</string>
    <string name="no_network">网络连接不可用</string>
    <string name="error_network">网络连接错误</string>
    <string name="enter">确定</string>
    <string name="de_actionbar_system">系统消息</string>
    <string name="main_customer">意见反馈</string>
    <string name="de_actionbar_sub_defult">聊天</string>
    <string name="all_group_member">更多群员</string>
    <string name="search_message">查看聊天记录</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群聊名称</string>
    <string name="group_nickname">群昵称</string>
    <string name="group_activity">群活动</string>
    <string name="group_announcement">群公告</string>
    <string name="group_apply">进群申请</string>
    <string name="group_number">群号码</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="group_code">群二维码</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="join_activity">参加</string>
    <string name="email">邮箱</string>
    <string name="message">消息</string>
    <string name="add">添加</string>
    <string name="group_my_name">群名称</string>
    <string name="no_group">您暂时没有加入任何群</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="ignore">忽略</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="no_data">没有相关数据！</string>
    <string name="start_audio">开始录音</string>
    <string name="end_audio">结束录音</string>
    <string name="speech_recognition">语音识别</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="fetching">获取中……</string>
    <string name="picture">图片</string>
    <string name="vedio">视频</string>
    <string name="file">文件</string>
    <string name="location">位置</string>
    <string name="group_flexible">群活动</string>
    <string name="vote">投票</string>
    <string name="create">创建</string>
    <string name="group_vote">群投票</string>
    <string name="vote_title">请输入投票主题(4-20字)</string>
    <string name="vote_time">投票时间</string>
    <string name="vote_status">投票状态</string>
    <string name="multiselect">允许多选</string>
    <string name="voting_period">投票期限</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="contact_notification_someone_agree_your_request">%1$s已同意你的好友请求</string>
    <string name="contact_notification_agree_your_request">对方已同意你的好友请求</string>

    <string-array name="spinners">
        <item>我的名字？</item>
        <item>我的手机号？</item>
    </string-array>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_passwork">忘记密码</string>
    <string name="prompt_user">请输入你的手机号码</string>
    <string name="rg_username">用户昵称</string>
    <string name="rg_code">发送验证码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">请输入你的密码</string>
    <string name="login_tv">LOGIN</string>
    <string name="phone">手机号码</string>
    <string name="InviteCode">邀请码</string>
    <string name="renchouzonge">认筹总额：¥</string>
    <string name="mubiaozonge">目标总额：¥</string>
    <string name="lijiduobao">立即夺宝</string>
    <string name="qiandao">签到</string>
    <string name="mine">我的</string>
    <string name="edit">编辑</string>
    <string name="mingpian">名片</string>
    <string name="woyaotuijian">我要推荐</string>
    <string name="renlingzhoingxin">认领中心</string>
    <string name="woderenmai">我的人脉</string>
    <string name="sanfenzhong">三分钟教学</string>
    <string name="wodeganhuo">我的干货</string>
    <string name="wodeqiuzu">我的求助</string>
    <string name="wodezhongchou">我的众筹</string>
    <string name="wodeduobao">我的夺宝</string>
    <string name="wodelinghun">我的灵魂贩卖</string>
    <string name="canyudehuodong">参与的活动</string>
    <string name="setting">设置</string>
    <string name="fankui">反馈</string>
    <string name="application_center">应用中心</string>
    <string name="woyaorenling">我要认领</string>
    <string name="searchSomething">请输入要搜索的关键字</string>
    <string name="quxiao">取消</string>
    <string name="renlingxinxi">认领信息</string>


    <string name="str_relation_colleague">同事</string>
    <string name="str_relation_schoolfellow">校友</string>
    <string name="str_relation_countrymen">同乡</string>
    <string name="str_relation_relative">亲人</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_claim_activiy">ClaimActiviy</string>
</resources>
