<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ike.communityalliance.ui.activity.CommonRegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/col_0fc28d"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/iv_vip_rg_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_white_back"
            />
        <TextView
            android:layout_centerInParent="true"
            style="@style/recommend_item_tv_styles"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="邀请码注册"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <EditText
            android:layout_marginTop="40dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/phone"
            android:id="@+id/et_vip_rg_phone"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_user"
            android:inputType="textPhonetic"
            android:maxLines="1"/>
        <EditText
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/user"
            android:id="@+id/et_vip_rg_username"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/rg_username"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/passwork"
            android:id="@+id/et_vip_rg_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_password"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <EditText
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/verification_code"
            android:id="@+id/et_vip_rg_inviteCode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="邀请码"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:maxLines="1"/>

        <Button
            android:textColor="@color/col_444343"
            android:background="@color/col_10DB9F"
            android:id="@+id/btn_vip_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/register"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
