<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ike.communityalliance.ui.activity.CommonRegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/col_0fc28d"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/iv_commen_rg_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_white_back"
            />
        <TextView
            android:layout_centerInParent="true"
            style="@style/recommend_item_tv_styles"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="普通用户注册"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <EditText
            android:layout_marginTop="40dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/phone"
            android:id="@+id/et_commen_rg_phone"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_user"
            android:inputType="textPhonetic"
            android:maxLines="1"/>
        <EditText
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/user"
            android:id="@+id/et_commen_rg_username"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/rg_username"
            android:maxLength="6"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/passwork"
            android:id="@+id/et_commen_rg_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_password"
            android:background="@drawable/edit_bg"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/verification_code"
                    android:id="@+id/et_commen_rg_code"
                    android:background="@drawable/edit_bg"
                    android:paddingLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="验证码"
                    android:inputType="number"
                    android:maxLines="1"/>
                <TextView
                    android:layout_toRightOf="@id/et_commen_rg_code"
                    android:background="@mipmap/code"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/tv_commen_rg_get_code"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/rg_code"/>
            </LinearLayout>
            <TextView
                android:visibility="gone"
              android:layout_alignParentRight="true"
                android:background="@color/col_999999"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tv_commen_rg_get_number"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:text="60"/>
        </RelativeLayout>
        <Button
            android:textColor="@color/col_444343"
            android:background="@color/col_10DB9F"
            android:id="@+id/btn_commen_registe"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/register"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
