<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
         >
            <TextView
                android:id="@+id/tv_mine_sign"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qiandao"
                android:textColor="@color/col_121212"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_mine_card"
                android:layout_marginRight="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
           android:src="@drawable/mine_card"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/col_ECEEF0"
            android:layout_height="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
          >
            <com.ike.communityalliance.wedget.XCRoundRectImageView
                android:layout_marginTop="10dp"
                android:id="@+id/iv_mine_userIcon"
                android:layout_centerHorizontal="true"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/default_portrait" />
            <LinearLayout
                android:id="@+id/ll_mine_1"
                android:layout_below="@+id/iv_mine_userIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_mine_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="王博文"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tv_mine_age"
                    android:layout_marginLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="29岁"/>
                <ImageView
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/iv_mine_sex"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/mine_man"/>
                </LinearLayout>
            <LinearLayout
                android:layout_below="@id/ll_mine_1"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginLeft="30dp"
                    android:id="@+id/ll_mine_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="账号:"/>
                        <TextView
                            android:id="@+id/tv_mine_account"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="11111111111"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="邮箱:"/>
                        <TextView
                            android:id="@+id/tv_mine_email"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="孟小宝"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="电话:"/>
                        <TextView
                            android:id="@+id/tv_mine_phone"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="1382465455454"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="生日:"/>
                        <TextView
                            android:id="@+id/tv_mine_birthday"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="2015-04-22"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="地址:"/>
                        <TextView
                            android:id="@+id/tv_mine_address"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="广东省广州市天河区"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginRight="40dp"
                    android:id="@+id/ll_mine_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="推荐:"/>
                        <TextView
                            android:id="@+id/tv_mine_recommenerName"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="黄金甲"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="认领:"/>
                        <TextView
                            android:id="@+id/tv_mine_claimerName"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="孟小宝"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="贡献值:"/>
                        <TextView
                            android:id="@+id/tv_mine_contributionNum"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="138"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/mine_tv_styles"
                            android:text="信誉值:"/>
                        <TextView
                            android:id="@+id/tv_mine_creditScore"
                            style="@style/mine_tv_styles"
                            android:layout_marginLeft="10dp"
                            android:text="100"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/iv_mine_edit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/mine_edit"
                />
            </RelativeLayout>
        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:background="@color/col_ECEEF0"
            android:layout_height="8dp"/>
        <LinearLayout
            android:id="@+id/ll_mine_recommend"
          android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mine_recomend"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"
                android:text="@string/woyaotuijian"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mine_contacts"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mine_contacts"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_20"
                android:text="我的人脉"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/col_ECEEF0"
            android:layout_height="10dp"/>
        <LinearLayout
            android:id="@+id/ll_mine_feedback"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mine_feedback"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_20"
                android:text="反馈"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mine_setting"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mine_setting"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_20"
                android:text="设置"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>